--- a/backend/package.json
+++ b/backend/package.json
@@ -1,8 +1,4 @@
 {
-<<<<<<< HEAD
-  "dependencies": {
-    "mongoose": "^8.4.3"
-=======
   "name": "backend",
   "version": "1.0.0",
   "description": "",
@@ -25,7 +21,7 @@
     "express": "^4.19.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.4.3",
-    "nodemon": "^3.1.3"
->>>>>>> 09fa7412e564012ffbc983b954e45a371d7f3a9e
+    "nodemon": "^3.1.3",
+    "zod": "^3.23.8"
   }
 }
